--- a/addany.html
+++ b/addany.html
@@ -6,8 +6,12 @@
   </head>
   <body>
     <form id="postForm">
-      <input type="hidden" name="num1" value="2" />
-      <input type="hidden" name="num2" value="4" />
+      <label for="num1">Enter first number:</label>
+      <input type="number" id="num1" name="num1" value="2" />
+      <br />
+      <label for="num2">Enter second number:</label>
+      <input type="number" id="num2" name="num2" value="4" />
+      <br />
       <button type="button" onclick="Add()">Add</button>
     </form>
     <div id="responseContainer"></div>
